--- a/photos-landscape.html
+++ b/photos-landscape.html
@@ -224,7 +224,7 @@
         <!-- 新增照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\landscape\9c2f4936429280645c2889e5b38313e.jpg" alt="沙漠落日">
+                <img src="images/photos/landscape/9c2f4936429280645c2889e5b38313e.jpg" alt="沙漠落日">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">沙漠落日</h2>
@@ -253,7 +253,7 @@
         <!-- 新增照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\landscape\55baaa5504a52acff76570dd86598f4.jpg" alt="峡谷风光">
+                <img src="images/photos/landscape/55baaa5504a52acff76570dd86598f4.jpg" alt="峡谷风光">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">青海湖</h2>
@@ -282,7 +282,7 @@
         <!-- 新增照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\landscape\07110cb1c2db57ce36fad728b6c86cf.jpg" alt="海岸线">
+                <img src="images/photos/landscape/07110cb1c2db57ce36fad728b6c86cf.jpg" alt="海岸线">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">青藏铁路</h2>
