--- a/photos-life.html
+++ b/photos-life.html
@@ -224,7 +224,7 @@
         <!-- 照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\life\aa8abd76895b71805126aadc8b834eb.jpg" alt="自然环境人像">
+                <img src="images/photos/life/aa8abd76895b71805126aadc8b834eb.jpg" alt="自然环境人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">路边的白猫</h2>
@@ -253,7 +253,7 @@
         <!-- 照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\life\c32c0dd1c953677853ceac58fb493dd.jpg" alt="创意人像">
+                <img src="images/photos/life/c32c0dd1c953677853ceac58fb493dd.jpg" alt="创意人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">老街上的身影</h2>
@@ -282,7 +282,7 @@
         <!-- 照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\life\cf3e32b7b9be1a6dbf0880da08d3cea.jpg" alt="多重曝光人像">
+                <img src="images/photos/life/cf3e32b7b9be1a6dbf0880da08d3cea.jpg" alt="多重曝光人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">草地上的相聚时光</h2>
