--- a/photos-portrait.html
+++ b/photos-portrait.html
@@ -224,7 +224,7 @@
         <!-- 照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\portrait\c6211df5bf2fcc38141d9391e054553.jpg" alt="自然环境人像">
+                <img src="images/photos/portrait/c6211df5bf2fcc38141d9391e054553.jpg" alt="自然环境人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">水畔的静美瞬间</h2>
@@ -253,7 +253,7 @@
         <!-- 照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\portrait\ed050638e88015d43d2d628dc87bb1e.jpg" alt="创意人像">
+                <img src="images/photos/portrait/ed050638e88015d43d2d628dc87bb1e.jpg" alt="创意人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">光影下的个性瞬间</h2>
@@ -282,7 +282,7 @@
         <!-- 照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\portrait\ffee9d3f1384a5ca5ee793ca7a3483e.jpg" alt="多重曝光人像">
+                <img src="images/photos/portrait/ffee9d3f1384a5ca5ee793ca7a3483e.jpg" alt="多重曝光人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">闺蜜的欢乐时光</h2>
