--- a/photos-street.html
+++ b/photos-street.html
@@ -224,7 +224,7 @@
         <!-- 照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\street\d10937107cf95bd0ceb663c320850aa.jpg" alt="自然环境人像">
+                <img src="images/photos/street/d10937107cf95bd0ceb663c320850aa.jpg" alt="自然环境人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">树影下的建筑一隅</h2>
@@ -253,7 +253,7 @@
         <!-- 照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\street\da7c43388f7705742b38e1cfa6f9f7b.jpg" alt="创意人像">
+                <img src="images/photos/street/da7c43388f7705742b38e1cfa6f9f7b.jpg" alt="创意人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">暮河游影</h2>
@@ -282,7 +282,7 @@
         <!-- 照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\ed65ad680c6325a83ad7d198e620a73.jpg" alt="多重曝光人像">
+                <img src="images/photos/ed65ad680c6325a83ad7d198e620a73.jpg" alt="多重曝光人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">路灯下的梦幻树影</h2>
