--- a/photos-travel.html
+++ b/photos-travel.html
@@ -224,7 +224,7 @@
         <!-- 照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\travel\aca7a828f6e83d4191d3b30b360d565.jpg" alt="自然环境人像">
+                <img src="images/photos/travel/aca7a828f6e83d4191d3b30b360d565.jpg" alt="自然环境人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">古建与湖景</h2>
@@ -253,7 +253,7 @@
         <!-- 照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\travel\c58aeb1b83b51912971e5c04709f648.jpg" alt="创意人像">
+                <img src="images/photos/travel/c58aeb1b83b51912971e5c04709f648.jpg" alt="创意人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">可可西里</h2>
@@ -282,7 +282,7 @@
         <!-- 照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="E:\101MY ALL\AI Trainer\personal website\images\photos\travel\ce8cfacafc7064f952c3510e329cddb.jpg" alt="多重曝光人像">
+                <img src="images/photos/travel/ce8cfacafc7064f952c3510e329cddb.jpg" alt="多重曝光人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">高原牧场上的牦牛</h2>
