--- a/photos.html
+++ b/photos.html
@@ -131,5 +131,6 @@
             // 灯箱功能已移至各个子页面中实现
         });
     </script>
+    <script src="js/image-error-handler.js"></script>
 </body>
 </html>
