--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         src="images/111.png" 
                         alt="个人卡通形象" 
                         class="avatar-image"
-                        onerror="console.error('图片加载失败:', this.src);"
+                        onerror="this.onerror=null; console.error('图片加载失败:', this.src); this.src='data:image/svg+xml;charset=utf-8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22200%22 height=%22200%22 viewBox=%220 0 200 200%22%3E%3Crect width=%22100%25%22 height=%22100%25%22 fill=%22%23f0f0f0%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 font-family=%22Arial%22 font-size=%2216%22 text-anchor=%22middle%22 fill=%22%23999%22%3E图片加载失败%3C/text%3E%3C/svg%3E';"
                     >
                     <div class="avatar-decoration"></div>
                 </div>
