--- a/index.html
+++ b/index.html
@@ -60,5 +60,10 @@
 
     <script src="js/main.js"></script>
     <script src="js/fix-avatar-image.js"></script>
+    <script>
+          fetch('./images/111.png').then(res => {
+            console.log(res, res.blob())
+        })
+    </script>
 </body>
 </html>
