--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="profile-photo">
-                        <img src="images/geren.jpg" alt="任文浩个人照片">
+                        <img src="https://wwang-blog.com.cn/renwenhao/images/avatar.jpg" alt="任文浩个人照片">
                     </div>
                 </div>
             </div>
