--- a/photos-street.html
+++ b/photos-street.html
@@ -21,7 +21,7 @@
         <!-- 照片项 1 -->
         <div class="fullscreen-photo-item active">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/street/0df0f790882e6125cbe1d86433e3531.jpg" alt="街头剪影">
+                <img src="https://images.pexels.com/photos/31447719/pexels-photo-31447719.jpeg" alt="街头剪影">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">都市角落的片刻</h2>
