--- a/photos-landscape.html
+++ b/photos-landscape.html
@@ -21,7 +21,7 @@
         <!-- 照片项 1 -->
         <div class="fullscreen-photo-item active">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/22.jpg" alt="平遥古城鸟瞰">
+                <img src="https://images.pexels.com/photos/31459215/pexels-photo-31459215.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="平遥古城鸟瞰">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">平遥古城</h2>
@@ -50,7 +50,7 @@
         <!-- 照片项 2 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/44.jpg" alt="山间日出">
+                <img src="https://images.pexels.com/photos/31459216/pexels-photo-31459216.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="山间日出">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">平遥古城</h2>
@@ -79,7 +79,7 @@
         <!-- 照片项 3 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/7b44a8e21dd1ffb25f124f00dd73a9e.jpg" alt="城市天际线">
+                <img src="https://images.pexels.com/photos/31459238/pexels-photo-31459238.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="城市天际线">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">北平的秋</h2>
@@ -108,7 +108,7 @@
         <!-- 照片项 4 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/landscape/0fa915f9a04d702391089a93de6c6d5.jpg" alt="湖光山色">
+                <img src="https://images.pexels.com/photos/31447436/pexels-photo-31447436.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="湖光山色">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">祁连山</h2>
@@ -137,7 +137,7 @@
         <!-- 照片项 5 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/HAO04087.JPG" alt="星空银河">
+                <img src="https://images.pexels.com/photos/31447439/pexels-photo-31447439.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="星空银河">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">昆仑山</h2>
@@ -166,7 +166,7 @@
         <!-- 新增照片项 6 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/landscape/6d88ae05d9a1ee730f3686605921820.jpg" alt="雪山日落">
+                <img src="https://images.pexels.com/photos/31447437/pexels-photo-31447437.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="雪山日落">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">U型公路</h2>
@@ -195,7 +195,7 @@
         <!-- 新增照片项 7 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/landscape/8e78f985101a745d070840f656f19de.jpg" alt="梯田风光">
+                <img src="https://images.pexels.com/photos/31447435/pexels-photo-31447435.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="梯田风光">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">青海湖</h2>
@@ -224,7 +224,7 @@
         <!-- 新增照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/landscape/9c2f4936429280645c2889e5b38313e.jpg" alt="沙漠落日">
+                <img src="https://images.pexels.com/photos/31447434/pexels-photo-31447434.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="沙漠落日">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">沙漠落日</h2>
@@ -253,7 +253,7 @@
         <!-- 新增照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/landscape/55baaa5504a52acff76570dd86598f4.jpg" alt="峡谷风光">
+                <img src="https://images.pexels.com/photos/31447432/pexels-photo-31447432.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="峡谷风光">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">青海湖</h2>
@@ -282,7 +282,7 @@
         <!-- 新增照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/landscape/07110cb1c2db57ce36fad728b6c86cf.jpg" alt="海岸线">
+                <img src="https://images.pexels.com/photos/31447441/pexels-photo-31447441.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="海岸线">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">青藏铁路</h2>
