--- a/photos-life.html
+++ b/photos-life.html
@@ -21,7 +21,7 @@
         <!-- 照片项 1 -->
         <div class="fullscreen-photo-item active">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/9a61c4a7751a8cfc68d134717de8984.jpg" alt="日常瞬间">
+                <img src="https://images.pexels.com/photos/31459351/pexels-photo-31459351.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="日常瞬间">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">墙顶的浪漫时刻</h2>
@@ -50,7 +50,7 @@
         <!-- 照片项 2 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/63a9745da48ea9056d1c9d3052a85e5.jpg" alt="温暖时光">
+                <img src="https://images.pexels.com/photos/31459352/pexels-photo-31459352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="温暖时光">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">民居前的共享单车</h2>
@@ -79,7 +79,7 @@
         <!-- 照片项 3 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/70c636da81b6263495617ab115c7acd.jpg" alt="生活细节">
+                <img src="https://images.pexels.com/photos/31459353/pexels-photo-31459353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="生活细节">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">黄昏下的城市与白塔</h2>
@@ -108,7 +108,7 @@
         <!-- 照片项 4 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/119a7aaf0f2a73ace6e860874a70ea5.jpg" alt="家庭时光">
+                <img src="https://images.pexels.com/photos/31459354/pexels-photo-31459354.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="家庭时光">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">光影中的植物</h2>
@@ -137,7 +137,7 @@
         <!-- 照片项 5 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/00959a1fc209245e6c3d3fa20fb85b8.jpg" alt="烟火气息">
+                <img src="https://images.pexels.com/photos/31459355/pexels-photo-31459355.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="烟火气息">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">好奇的白猫</h2>
@@ -166,7 +166,7 @@
         <!-- 照片项 6 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/3925b8a8b2175a0c20f3d1878d92107.jpg" alt="阅读时光">
+                <img src="https://images.pexels.com/photos/31459356/pexels-photo-31459356.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="阅读时光">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">街边的糖葫芦摊</h2>
@@ -195,7 +195,7 @@
         <!-- 照片项 7 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/736697341750f23e8f0d494606b5d54.jpg" alt="生活点滴">
+                <img src="https://images.pexels.com/photos/31459363/pexels-photo-31459363.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="生活点滴">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">公园中的放飞时刻</h2>
@@ -224,7 +224,7 @@
         <!-- 照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/aa8abd76895b71805126aadc8b834eb.jpg" alt="自然环境人像">
+                <img src="https://images.pexels.com/photos/31459360/pexels-photo-31459360.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="自然环境人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">路边的白猫</h2>
@@ -253,7 +253,7 @@
         <!-- 照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/c32c0dd1c953677853ceac58fb493dd.jpg" alt="创意人像">
+                <img src="https://images.pexels.com/photos/31459362/pexels-photo-31459362.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="创意人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">老街上的身影</h2>
@@ -282,7 +282,7 @@
         <!-- 照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/life/cf3e32b7b9be1a6dbf0880da08d3cea.jpg" alt="多重曝光人像">
+                <img src="https://images.pexels.com/photos/31459349/pexels-photo-31459349.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="多重曝光人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">草地上的相聚时光</h2>
