--- a/photos-portrait.html
+++ b/photos-portrait.html
@@ -21,7 +21,7 @@
         <!-- 照片项 1 -->
         <div class="fullscreen-photo-item active">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/2f8b5859d21992c16323f4d529199c6.jpg" alt="光影侧脸">
+                <img src="https://images.pexels.com/photos/31447816/pexels-photo-31447816.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="光影侧脸">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">光影侧脸</h2>
@@ -50,7 +50,7 @@
         <!-- 照片项 2 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/03a9a6991e378adb07c94606eb6f2fb.jpg" alt="微笑瞬间">
+                <img src="https://images.pexels.com/photos/31459051/pexels-photo-31459051.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="微笑瞬间">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">旷野之仰</h2>
@@ -79,7 +79,7 @@
         <!-- 照片项 3 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/6e48e0014f34a879a3b55fd1ee0b789.jpg" alt="黑白肖像">
+                <img src="https://images.pexels.com/photos/31459054/pexels-photo-31459054.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="黑白肖像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">夜饮时光</h2>
@@ -108,7 +108,7 @@
         <!-- 照片项 4 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/31a7089fcb317c682c6060e63b597b2.jpg" alt="侧光人像">
+                <img src="https://images.pexels.com/photos/31447819/pexels-photo-31447819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="侧光人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">枫叶下的秘语</h2>
@@ -137,7 +137,7 @@
         <!-- 照片项 5 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/37e4d0242387e2dc0cfeca17fdc59cb.jpg" alt="时尚人像">
+                <img src="https://images.pexels.com/photos/31459075/pexels-photo-31459075.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="时尚人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">旷野中的仰望</h2>
@@ -166,7 +166,7 @@
         <!-- 照片项 6 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/8367ef51a57a09279029522ab965213.jpg" alt="商业人像">
+                <img src="https://images.pexels.com/photos/31459083/pexels-photo-31459083.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="商业人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">夜酌时光</h2>
@@ -195,11 +195,11 @@
         <!-- 照片项 7 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/b25e7f6e4a3ad48983336bd4f2f2ce0.jpg" alt="城市人像">
+                <img src="https://images.pexels.com/photos/31459146/pexels-photo-31459146.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="城市人像">
             </div>
             <div class="photo-description">
-                <h2 class="photo-title">枫叶寄情</h2>
-                <p class="photo-subtitle">画面中，一位长发女子身着黑色皮衣，手持一片金黄枫叶，枫叶半掩住她的脸庞。暗黑色背景下，女子眼神柔和，神情温婉，自然的光影勾勒出她的轮廓，整体氛围静谧而富有诗意，尽显少女的温柔与灵动 。</p>
+                <h2 class="photo-title">湖畔的优雅女子</h2>
+                <p class="photo-subtitle">一位女子身着淡蓝色纱质长裙，头发上别着白色花朵装饰，坐在水边，背景是波光粼粼的湖水，整体画面静谧美好，尽显优雅气质。</p>
                 <div class="photo-details">
                     <div class="photo-detail-item">
                         <i class="fas fa-map-marker-alt"></i>
@@ -224,11 +224,11 @@
         <!-- 照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/c6211df5bf2fcc38141d9391e054553.jpg" alt="自然环境人像">
+                <img src="https://images.pexels.com/photos/31459154/pexels-photo-31459154.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="自然环境人像">
             </div>
             <div class="photo-description">
-                <h2 class="photo-title">水畔的静美瞬间</h2>
-                <p class="photo-subtitle">一位身着白色长裙、头戴白花装饰的女子，在澄澈湛蓝的水域边微微蹲下。她的身影与水中倒影相映，周围环境纯净空灵，仿佛一幅绝美的画卷，尽显人与自然和谐之美，给人一种宁静悠远的感觉。</p>
+                <h2 class="photo-title">可可西里</h2>
+                <p class="photo-subtitle">一名男子身着黑色皮夹克、白衬衫和条纹领带，搭配牛仔裤，站在广袤的荒原上，手持水瓶正在喝水。背景是开阔的大地、远处覆雪的山脉以及蓝天白云，展现出一种自由、不羁的氛围。</p>
                 <div class="photo-details">
                     <div class="photo-detail-item">
                         <i class="fas fa-map-marker-alt"></i>
@@ -253,7 +253,7 @@
         <!-- 照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/ed050638e88015d43d2d628dc87bb1e.jpg" alt="创意人像">
+                <img src="https://images.pexels.com/photos/31447728/pexels-photo-31447728.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="创意人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">光影下的个性瞬间</h2>
@@ -282,11 +282,11 @@
         <!-- 照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/portrait/ffee9d3f1384a5ca5ee793ca7a3483e.jpg" alt="多重曝光人像">
+                <img src="https://images.pexels.com/photos/31459109/pexels-photo-31459109.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="多重曝光人像">
             </div>
             <div class="photo-description">
-                <h2 class="photo-title">闺蜜的欢乐时光</h2>
-                <p class="photo-subtitle">图中两位长发女生面带笑容，靠在一起。左边女生穿灰色带红条纹上衣，右边女生穿着带有毛绒装饰的衣物。背景有绿色灯光，照片右下角显示拍摄时间为 2025 年 1 月 30 日 17 点 18 分，氛围轻松愉快 。</p>
+                <h2 class="photo-title">春日花下的女子</h2>
+                <p class="photo-subtitle">一位女子戴着黑色帽子，身穿灰色上衣，站在开满白色花朵的树枝旁，画面清新自然，展现出春日的美好氛围 。</p>
                 <div class="photo-details">
                     <div class="photo-detail-item">
                         <i class="fas fa-map-marker-alt"></i>
