--- a/photos-travel.html
+++ b/photos-travel.html
@@ -21,7 +21,7 @@
         <!-- 照片项 1 -->
         <div class="fullscreen-photo-item active">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/8de614dd55007f5320e17efe25b5b35.jpg" alt="异域风情">
+                <img src="https://images.pexels.com/photos/31447532/pexels-photo-31447532.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="异域风情">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">通向雪山的公路</h2>
@@ -50,11 +50,11 @@
         <!-- 照片项 2 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/8df7776eadd298d5397e4db973691dc.jpg" alt="旅途风光">
+                <img src="https://images.pexels.com/photos/31447822/pexels-photo-31447822.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="旅途风光">
             </div>
             <div class="photo-description">
-                <h2 class="photo-title">雪后的古城墙</h2>
-                <p class="photo-subtitle">这是一幅古城墙的照片，城墙由灰黑色砖石砌成，部分墙面有积雪。上方建有传统中式风格的城楼，飞檐翘角，在蓝天的映衬下，显得古朴而庄重，散发着历史的厚重感。</p>
+                <h2 class="photo-title">玉渊潭</h2>
+                <p class="photo-subtitle">这张图片展示了一座高耸的电视塔，塔身线条简洁，顶部有天线装置。塔的周围是盛开白色花朵的树木，蓝天为背景，整体画面清新，可能是北京的中央电视塔 。</p>
                 <div class="photo-details">
                     <div class="photo-detail-item">
                         <i class="fas fa-map-marker-alt"></i>
@@ -79,7 +79,7 @@
         <!-- 照片项 3 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/10e085a0afed1b2406fc8d3c8b0247b.jpg" alt="文化印记">
+                <img src="https://images.pexels.com/photos/31447533/pexels-photo-31447533.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="文化印记">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">雪域公路之行</h2>
@@ -108,7 +108,7 @@
         <!-- 照片项 4 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/79be6f0bdef4bc6673761abc3455d84.jpg" alt="旅途见闻">
+                <img src="https://images.pexels.com/photos/31447536/pexels-photo-31447536.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="旅途见闻">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">檐下柿韵</h2>
@@ -137,7 +137,7 @@
         <!-- 照片项 5 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/164bb77e6f46fc38bfedf9637fe6be0.jpg" alt="异域风情">
+                <img src="https://images.pexels.com/photos/31447535/pexels-photo-31447535.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="异域风情">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">多彩丹霞山脉</h2>
@@ -166,7 +166,7 @@
         <!-- 照片项 6 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/320f6bbf8c5da371cb0b505c810439a.jpg" alt="自然奇观">
+                <img src="https://images.pexels.com/photos/31447538/pexels-photo-31447538.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="自然奇观">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">古建晨烟</h2>
@@ -195,7 +195,7 @@
         <!-- 照片项 7 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/6453d1e4c7e543147aebea5d397ec67.jpg" alt="旅行日记">
+                <img src="https://images.pexels.com/photos/31447537/pexels-photo-31447537.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="旅行日记">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">湖畔秋韵</h2>
@@ -224,7 +224,7 @@
         <!-- 照片项 8 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/aca7a828f6e83d4191d3b30b360d565.jpg" alt="自然环境人像">
+                <img src="https://images.pexels.com/photos/31447539/pexels-photo-31447539.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="自然环境人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">古建与湖景</h2>
@@ -253,7 +253,7 @@
         <!-- 照片项 9 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/c58aeb1b83b51912971e5c04709f648.jpg" alt="创意人像">
+                <img src="https://images.pexels.com/photos/31447540/pexels-photo-31447540.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="创意人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">可可西里</h2>
@@ -282,7 +282,7 @@
         <!-- 照片项 10 -->
         <div class="fullscreen-photo-item">
             <div class="fullscreen-photo-wrapper">
-                <img src="images/photos/travel/ce8cfacafc7064f952c3510e329cddb.jpg" alt="多重曝光人像">
+                <img src="https://images.pexels.com/photos/31447541/pexels-photo-31447541.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="多重曝光人像">
             </div>
             <div class="photo-description">
                 <h2 class="photo-title">高原牧场上的牦牛</h2>
