--- a/photos.html
+++ b/photos.html
@@ -38,7 +38,7 @@
                 <!-- 风景摄影 -->
                 <div class="theme-item" onclick="location.href='photos-landscape.html'">
                     <div class="theme-image">
-                        <img src="images/HAO04087.JPG" alt="风景摄影">
+                        <img src="https://images.pexels.com/photos/31447439/pexels-photo-31447439.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="风景摄影">
                         <div class="theme-overlay"></div>
                     </div>
                     <div class="theme-info">
@@ -51,7 +51,7 @@
                 <!-- 人像摄影 -->
                 <div class="theme-item" onclick="location.href='photos-portrait.html'">
                     <div class="theme-image">
-                        <img src="images/photos/portrait/2f8b5859d21992c16323f4d529199c6.jpg" alt="人像摄影">
+                        <img src="https://images.pexels.com/photos/31447816/pexels-photo-31447816.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="人像摄影">
                         <div class="theme-overlay"></div>
                     </div>
                     <div class="theme-info">
@@ -64,7 +64,7 @@
                 <!-- 街头摄影 -->
                 <div class="theme-item" onclick="location.href='photos-street.html'">
                     <div class="theme-image">
-                        <img src="images/photos/street/44f8fabccfd9cff99a493d4d2e962cf.jpg" alt="街头摄影">
+                        <img src="https://images.pexels.com/photos/31447524/pexels-photo-31447524.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="街头摄影">
                         <div class="theme-overlay"></div>
                     </div>
                     <div class="theme-info">
@@ -77,7 +77,7 @@
                 <!-- 旅行摄影 -->
                 <div class="theme-item" onclick="location.href='photos-travel.html'">
                     <div class="theme-image">
-                        <img src="images/photos/travel/164bb77e6f46fc38bfedf9637fe6be0.jpg" alt="旅行摄影">
+                        <img src="https://images.pexels.com/photos/31447535/pexels-photo-31447535.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="旅行摄影">
                         <div class="theme-overlay"></div>
                     </div>
                     <div class="theme-info">
@@ -93,7 +93,7 @@
                 <!-- 生活纪实 -->
                 <div class="theme-item" onclick="location.href='photos-life.html'">
                     <div class="theme-image">
-                        <img src="images/photos/life/736697341750f23e8f0d494606b5d54.jpg" alt="生活纪实">
+                        <img src="https://images.pexels.com/photos/31459363/pexels-photo-31459363.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="生活纪实">
                         <div class="theme-overlay"></div>
                     </div>
                     <div class="theme-info">
