--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="index.html">主页 | Home</a></li>
                     <li><a href="https://www.xiaohongshu.com/user/profile/61a64f71000000001000fbcc" target="_blank">小红书 | Red</a></li>
-                    <li><a href="https://www.pexels.com/zh-CN/@2151000542/?sort_by=popularity&filter=photos">摄影 | Photographs</a></li>
+                    <li><a href="photos.html">摄影 | Photographs</a></li>
                     <li><a href="agents.html" class="agent-link">我的智能体 | Agent <i class="fas fa-robot"></i></a></li>
                 </ul>
             </nav>
