--- a/resume.html
+++ b/resume.html
@@ -66,38 +66,38 @@
                     <h3>AI训练师（内部转岗）</h3>
                     <p class="resume-date">北京金隅天坛家具股份有限公司--2024.04 - 2025.03</p>
                     <ul>
-                        <li>·指令遵循专项训练：在逻辑推理专项训练数据处理项目中，负责依据指令遵循、答案正确性等多维度对 query 及答案进行判断。面对高数等难题，借助 “百度教育” 等工具辅助标注，针对工具真题存错情况，采用多工具与多个模型交叉验证，使标注准确率稳定超 95% 。</li>
-                        <li>·家装风格指令遵循专项训练：负责家装风格指令遵循专项数据评估工作。制定多维度评估标准，包括指令遵循度、回答帮助性、真实性、简洁性及安全性。针对非设计背景团队，构建主流家装风格知识库，设计标准化回复模板，确保评估一致性，项目最终达成95%以上的准确率。</li>
-                        <li>·多场景Agent数据SFT：负责家装设计助手等 8 个场景的数据 SFT 工作，需依场景功能与工具定义，判断、改写多轮对话思维链及工具调用部分。面对Agent数据标注难点，快速掌握标注规则。为提升交付效率，自研用 cursor 编写的 JSON 代码格式验证脚本，在组内分享 cursor 使用及应用思维，推动团队能力提升 。</li>
-                        <li>·多场景Agent评测：依据复杂上文信息，判断xiaoTIN 2.0、 GPT-4o、Qwen2.5 三个模型下一轮对话输出在工具调用及参数方面的正确性，并撰写评测报告。面对超长 JSON 格式且多为英文的上文信息，利用 cursor 进行文本格式化与翻译，显著提升标注效率与准确率。项目尾声，深入分析数据，总结模型优缺点，撰写论据详实的评测报告 。</li>
-                        <li>·图文交错项目：负责政治、军事、财经类中英混合图文专项数据相关性评估工作。针对专业术语翻译不准确影响判断的问题，主动基于Coze平台设计专项翻译工作流，撰写结构化Prompt框架提升专业术语处理能力。解决了敏感话题翻译难题，通过灵活调用国内外大模型形成互补翻译策略，有效提升翻译准确率。成果在团队内广泛应用，显著提高团队标注质量。</li>
-                        <li>·RAG项目：参与RAG检索增强生成训练数据标注与质检工作，负责多领域知识验证与答案准确性评估。针对通用领域数据难以验真的痛点，发掘垂直领域验真渠道，确保数据真实性和权威性。在标注中坚持高质量原则，本着能标注绝不丢弃的原则，后晋升为质检负责人。引入Diffchecker文本差异比对工具，实现质检效率提升300%，为团队贡献解决方案。</li>
-                        <li>·文生图数据构建专项：参与20万+量级图像数据筛选与内容标注项目，实现供应商与内部团队的高效协同。项目分为筛选分类与内容描述两阶段。针对标注一致性问题，创建在线答疑文档及正反例样本库，显著提升跨团队理解一致性，解决标注规则频繁争议问题。面对图像描述阶段的专业性差异挑战，开发Coze智能体工具，有效提升整体标注质量。</li>
-                        <li>·图片信息判读SFT专项：负责图片信息判读 SFT 专项数据管理与质检，面对数据量大、标注难、人效低的困境，启用供应商标注。项目初期，针对答疑压力大、准确率与效率低等问题，采取详细培训带练、制定提问模板、细化打回备注、复盘同步共性问题等措施，一周内将准确率提至 92%，保证项目如期交付。</li>
-                        <li>·脚本需求承接与撰写：负责承接团队内部各方面项目需求额数据处理python脚本撰写与相关工具开发，利用cursor快速响应需求并完成阶段性交付，培训脚本使用流程，跟进后序脚本与工具优化需求，完成最终可用脚本与工具交付，如：JSON代码正确性查验脚本、Excel质量数据合并与优化脚本、图片体积压缩工具等。</li>
-                        <li>·Case收集分析与文档优化：收集数据标注过程中产生的goodcase和badcase，整理和提炼典型问题和共性问题，用于反哺规则文档优化、建立正例样本库&反例样本库、拉齐规则理解、为评测报告提供数据支持。</li>
-                        <li>·数据分析与评测报告撰写：分析相关评测结果数据，进行数据问题定位、结论产出与后续规划建议，撰写相关评测报告，根据评测背景，前置评测核心结论，展示相关goodcase或badcase，为评测结论提供数据支持。协助需求方了解模型表现，为后续模型优化提供方向。</li>
+                        <li>·指令遵循专项训练：**********************************************************************</li>
+                        <li>·家装风格指令遵循专项训练：**************************************************************</li>
+                        <li>·多场景Agent数据SFT：********************************************************************</li>
+                        <li>·多场景Agent评测：***********************************************************************</li>
+                        <li>·图文交错项目：**************************************************************************</li>
+                        <li>·RAG项目：*******************************************************************************</li>
+                        <li>·文生图数据构建专项：********************************************************************</li>
+                        <li>·图片信息判读SFT专项：*******************************************************************</li>
+                        <li>·脚本需求承接与撰写：********************************************************************</li>
+                        <li>·Case收集分析与文档优化：****************************************************************</li>
+                        <li>·数据分析与评测报告撰写：****************************************************************</li>
                     </ul>
                 </div>
                 <div class="resume-item">
                     <h3>产品经理</h3>
                      <p class="resume-date">北京金隅天坛家具股份有限公司--2023.07 - 2024.03</p>
                      <ul>
-                         <li>·产品调研：深度且全面地调研市场上的家具品牌格局，洞察流行趋势，并与100+厂商深 度沟通交流。</li>
-                         <li>·数据分析：研究当下流行趋势，结合公司销售数据及调研数据，运用AI工具确定目标人 群，并分析竞品数千件。</li>
-                         <li>·产品开发：进行产品规划并运用AI工具进行家具设计三套，其中全程跟踪一套(25件) (从整体产品规划、产品造型、功能完善到产品上线全流程),另外两套负责家具设计并配合落地。</li>
-                         <li>·项目协作：与研发、市场、运营等多个部门紧密协作沟通对方需求。在产品开发阶段， 与团队深入讨论技术可行性，保障产品按时上线。</li>
-                         <li>·项目跟进：根据产品定位确定产品材质及工艺，与供应链反复沟通、修改，确保产品按 时落地。</li>
-                         <li>·市场推广：以产品特色、品牌宣传为目标，制作产品宣传册及宣传文案两套，配合市场部门进行内容策划，发布小红书笔记，累计阅读量10W+ 等。</li>
+                         <li>·产品调研：******************************************************************************</li>
+                         <li>·数据分析：******************************************************************************</li>
+                         <li>·产品开发：******************************************************************************</li>
+                         <li>·项目协作：******************************************************************************</li>
+                         <li>·项目跟进：******************************************************************************</li>
+                         <li>·市场推广：******************************************************************************</li>
                     </ul>
                 </div>
                 <div class="resume-item">
                     <h3>数据标注（实习）</h3>
                     <p class="resume-date">作业帮--2023.05 - 2023.06</p>
                     <ul>
-                        <li>·单轮对话专项：主要进行指令遵循的专项训练，明确模型在解答学生学习问题时需遵循的各类指令，如针对不同学科题型（选择题、简答题、应用题等）回答是否与学生问题一致。</li>
-                        <li>·整理badcase：对 badcase 进行整理并分析，根据 badcase 分析结果，对现有的规则文档进行优化。修订对话流程、完善话术模板，确保规则文档能够更好地指导标注工作。</li>
-                        <li>·供应商培训：负责组织并实施对供应商标注人员的培训工作，通过视频会议、案例演示等多种形式，向供应商传递准确的数据标注规则。</li>
+                        <li>·单轮对话专项：****************************************************************************</li>
+                        <li>·整理badcase：*****************************************************************************</li>
+                        <li>·供应商培训：******************************************************************************</li>
                     </ul>
                 </div>
             </section>
