--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
                 <h2><i class="fas fa-briefcase"></i> 工作经历 | Work Experience</h2>
                 <div class="resume-item">
                     <h3>AI训练师（内部转岗）</h3>
-                    <p class="resume-date">北京金隅天坛家具股份有限公司--2024.04 - 2025.03</p>
+                    <p class="resume-date">北京*****股份有限公司--2024.04 - 2025.03</p>
                     <ul>
                         <li>·指令遵循专项训练：**********************************************************************</li>
                         <li>·家装风格指令遵循专项训练：**************************************************************</li>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="resume-item">
                     <h3>产品经理</h3>
-                     <p class="resume-date">北京金隅天坛家具股份有限公司--2023.07 - 2024.03</p>
+                     <p class="resume-date">北京*****股份有限公司--2023.07 - 2024.03</p>
                      <ul>
                          <li>·产品调研：******************************************************************************</li>
                          <li>·数据分析：******************************************************************************</li>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="resume-item">
                     <h3>数据标注（实习）</h3>
-                    <p class="resume-date">作业帮--2023.05 - 2023.06</p>
+                    <p class="resume-date">***--2023.05 - 2023.06</p>
                     <ul>
                         <li>·单轮对话专项：****************************************************************************</li>
                         <li>·整理badcase：*****************************************************************************</li>
