--- a/resume.html
+++ b/resume.html
@@ -64,19 +64,17 @@
                 <h2><i class="fas fa-briefcase"></i> 工作经历 | Work Experience</h2>
                 <div class="resume-item">
                     <h3>AI训练师（内部转岗）</h3>
-                    <p class="resume-date">北京*****股份有限公司--2024.04 - 2025.03</p>
+                    <p class="resume-date">北京三快在线科技有限公司--2024.04 - 2025.04</p>
                     <ul>
-                        <li>·指令遵循专项训练：**********************************************************************</li>
-                        <li>·家装风格指令遵循专项训练：**************************************************************</li>
-                        <li>·多场景Agent数据SFT：********************************************************************</li>
-                        <li>·多场景Agent评测：***********************************************************************</li>
-                        <li>·图文交错项目：**************************************************************************</li>
-                        <li>·RAG项目：*******************************************************************************</li>
-                        <li>·文生图数据构建专项：********************************************************************</li>
-                        <li>·图片信息判读SFT专项：*******************************************************************</li>
-                        <li>·脚本需求承接与撰写：********************************************************************</li>
-                        <li>·Case收集分析与文档优化：****************************************************************</li>
-                        <li>·数据分析与评测报告撰写：****************************************************************</li>
+                        <li>·RAG项目：参与RAG检索增强生成训练数据标注与质检工作，负责多领域知识验证与答案准确性评估。针对通用领域数据难以验真的痛点，发掘垂直领域验真渠道，确保数据真实性和权威性。在标注中坚持高质量原则，本着能标注绝不丢弃的原则，后晋升为质检负责人。引入Diffchecker文本差异比对工具，实现质检效率提升300%，为团队贡献解决方案。</li>
+                        <li>·文生图数据构建专项：参与20万+量级图像数据筛选与内容标注项目，实现供应商与内部团队的高效协同。项目分为筛选分类与内容描述两阶段。针对标注一致性问题，创建在线答疑文档及正反例样本库，显著提升跨团队理解一致性，解决标注规则频繁争议问题。面对图像描述阶段的专业性差异挑战，开发Coze智能体工具，有效提升整体标注质量。</li>
+                        <li>·图片信息判读SFT专项：负责图片信息判读 SFT 专项数据管理与质检，面对数据量大、标注难、人效低的困境，启用供应商标注。项目初期，针对答疑压力大、准确率与效率低等问题，采取详细培训带练、制定提问模板、细化打回备注、复盘同步共性问题等措施，一周内将准确率提至 92%，保证项目如期交付。</li>
+                        <li>·图文交错项目：负责政治、军事、财经类中英混合图文专项数据相关性评估工作。针对专业术语翻译不准确影响判断的问题，主动基于Coze平台设计专项翻译工作流，撰写结构化Prompt框架提升专业术语处理能力。解决了敏感话题翻译难题，通过灵活调用国内外大模型形成互补翻译策略，有效提升翻译准确率。成果在团队内广泛应用，显著提高团队标注质量。</li>
+                        <li>·OCR图文校对项目：负责 10w 量级 OCR 图文校对项目管理，协调供应商标注并主导质检。针对艺术字体、小字识别及阅读顺序等难题，制定差异化识别方案，与算法讨论后纳入规则文档。强调文本框完整覆盖要求，保障数据质量，项目顺利交付且算法反馈效果良好。</li>
+                        <li>·DPO人类反馈美学及合理性标注项目：负责 18w 量级 DPO 美学及合理性标注项目管理，协调供应商标注并主导质检。针对人像数据优质率低问题，与算法沟通调整评分标准，创建在线 Q&A 文档并每日复盘高频问题，保障项目准确率超 95%，助力模型文生图效果提升。</li>
+                        <li>·脚本需求承接与撰写：负责承接团队内部各方面项目需求额数据处理python脚本撰写与相关工具开发，利用cursor快速响应需求并完成阶段性交付，培训脚本使用流程，跟进后序脚本与工具优化需求，完成最终可用脚本与工具交付，如：JSON代码正确性查验脚本、Excel质量数据合并与优化脚本、图片体积压缩工具等。</li>
+                        <li>·Case收集分析与文档优化：收集数据标注过程中产生的goodcase和badcase，整理和提炼典型问题和共性问题，用于反哺规则文档优化、建立正例样本库&反例样本库、拉齐规则理解、为评测报告提供数据支持。</li>
+                        <li>·数据分析与评测报告撰写：分析相关评测结果数据，进行数据问题定位、结论产出与后续规划建议，撰写相关评测报告，根据评测背景，前置评测核心结论，展示相关goodcase或badcase，为评测结论提供数据支持。协助需求方了解模型表现，为后续模型优化提供方向。</li>
                     </ul>
                 </div>
                 <div class="resume-item">
