--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="resume-item">
                     <h3>产品经理</h3>
-                     <p class="resume-date">北京*****股份有限公司--2023.07 - 2024.03</p>
+                     <p class="resume-date">北京金隅天坛家具股份有限公司--2023.07 - 2024.03</p>
                      <ul>
                          <li>-产品调研：深度且全面地调研市场上的家具品牌格局，洞察流行趋势，并与100+厂商深 度沟通交流。</li>
                          <li>-数据分析：研究当下流行趋势，结合公司销售数据及调研数据，运用AI工具确定目标人 群，并分析竞品数千件。</li>
