--- a/resume.html
+++ b/resume.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="resume-item">
                     <h3>数据标注（实习）</h3>
-                    <p class="resume-date">***--2023.05 - 2023.06</p>
+                    <p class="resume-date">作业帮--2023.05 - 2023.06</p>
                     <ul>
                         <li>-单轮对话专项：主要进行指令遵循的专项训练，明确模型在解答学生学习问题时需遵循的各类指令，如针对不同学科题型（选择题、简答题、应用题等）回答是否与学生问题一致。</li>
                         <li>-整理badcase：对 badcase 进行整理并分析，根据 badcase 分析结果，对现有的规则文档进行优化。修订对话流程、完善话术模板，确保规则文档能够更好地指导标注工作。</li>
